added index title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> eniks </title>
+        <title> nicks </title>
     </head>
     <body> how are you </body>
 </html>
