--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
     <head>
         <title> nicks </title>
     </head>
-    <body> how are you </body>
+    <body>
+        <h1> Eniks </h1>
+
+        <script src="text.js"></script>
+
+    </body>
 </html>
